<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="album"
            type="com.uniandes.vinilosapplication.data.model.AlbumModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_logo_album"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:contentDescription="@string/logo_album"
                android:scaleType="fitCenter"
                android:src="@drawable/logo_vinilos"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/albumname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/montserrat_semibold"
                android:hint="@string/album_name"
                android:letterSpacing="0.3"
                android:text="@{album.name}"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_logo_album" />

            <Button
                android:id="@+id/albumDetailAssociateTrackButton"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_gradient"
                android:fontFamily="@font/montserrat_semibold"
                android:letterSpacing=".3"
                android:padding="10dp"
                android:text="@string/add_song"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/albumname" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="410dp"
                android:layout_height="27dp"
                android:layout_marginTop="12dp"
                android:background="@color/gray_200"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/albumDetailAssociateTrackButton">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="151dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:padding="4dp"
                    android:text="@string/description"
                    android:textAlignment="textEnd"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/albumdesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/montserrat_semibold"
                android:hint="@string/album_description"
                android:letterSpacing="0.2"
                android:padding="10dp"
                android:text="@{album.description}"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="416dp"
                android:layout_height="30dp"
                android:background="@color/gray_200"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/albumdesc">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="131dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:padding="4dp"
                    android:text="@string/canciones"
                    android:textAlignment="center"
                    android:textSize="18sp" />
            </LinearLayout>

            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="411dp"
                android:layout_height="335dp"
                android:layout_below="@+id/albumname"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
                app:layout_constraintVertical_bias="0.0"
                tools:context=".ui.fragments.AlbumDetailFragment">

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/fragments_rv"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    tools:listitem="@layout/track_item" />
            </FrameLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>