<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_splashScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    tools:context=".ui.activities.SplashscreenActivity"
    tools:ignore="Overdraw">

...
            android:letterSpacing="0.3"
            android:text="@string/vinilos_name"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/bt_start"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/button_start"
            android:fontFamily="@font/montserrat_semibold"
            android:letterSpacing=".3"
...
