<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="collector"
            type="com.uniandes.vinilosapplication.data.model.CollectorModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="74dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="410dp"
                android:layout_height="300dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.333"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints">

                <ImageView
                    android:id="@+id/iv_collector_picture"
                    android:layout_width="154dp"
                    android:layout_height="233dp"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/collector_image"
                    android:scaleType="center"
                    android:src="@drawable/logo_vinilos"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.082"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/collectorName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="124dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:hint="@string/collector_name"
                    android:text="@{collector.name}"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:translationY="-25dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.748"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/collectorEmail"
                    android:layout_width="222dp"
                    android:layout_height="23dp"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/montserrat_regular"
                    android:hint="@string/collector_detail_email"
                    android:text="@{collector.email}"
                    android:textColor="@color/gray_900"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.915"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/collectorName" />

                <TextView
                    android:id="@+id/collectorNumber"
                    android:layout_width="191dp"
                    android:layout_height="14dp"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/montserrat_regular"
                    android:hint="@string/collector_telephone"
                    android:text="@{collector.telephone}"
                    android:textColor="@color/gray_900"
                    android:textSize="13sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.808"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/collectorEmail" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="416dp"
                android:layout_height="30dp"
                android:background="@color/gray_200"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="131dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:padding="4dp"
                    android:text="@string/title_album"
                    android:textAlignment="center"
                    android:textSize="18sp" />
            </LinearLayout>

            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="411dp"
                android:layout_height="335dp"
                android:layout_marginBottom="50dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
                app:layout_constraintVertical_bias="0.0"
                tools:context=".ui.fragments.CollectorDetailFragment">

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/fragments_rv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:listitem="@layout/album_item" />


            </FrameLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>