...
            android:id="@+id/musicianFragment"
            android:title="@string/artistas"
            android:icon="@drawable/ic_baseline_music_note_24"
            app:showAsAction="never" />

        <item
            android:id="@+id/collectorFragment"
            android:title="@string/collectors"
            android:icon="@drawable/ic_baseline_people_outline_24"
            app:showAsAction="never" />
    </group>
</menu>
